--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: gamingmithandicap # Your GitHub organization or username, where this repository lives
+repo: status # The name of this repository
 
 sites:
   - name: GamingMitHandicap - Webseite & Forum
@@ -21,7 +21,7 @@ status-website:
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
-    - title: Status
+    - title: GamingMitHandicap - Status
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
