--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,9 +7,9 @@ sites:
     url: https://www.gamingmithandicap.de
 #  - name: Wikipedia
 #    url: https://en.wikipedia.org
-    port: 80
-    check: "tcp-ping"
-    ipv6: true
+#    port: 80
+#    check: "tcp-ping"
+#    ipv6: true
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
