--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,11 +17,11 @@ status-website:
   # cname: status2.gamhc.de
   baseUrl: /status
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: GamingMitHandicap - Status
+  introTitle: "Gaming mit Handicap Status"
+  introMessage: Dies ist die Status Seite von Gaming mit Handicap, die **Echtzeit** Daten von unserem [GitHub repository](https://github.com/gamingmithandicap/status) verwendet. [**Erhalte kostenlos deine eigene Statusseite**](https://github.com/upptime/upptime)
   navbar:
-    - title: GamingMitHandicap - Status
+    - title: Status
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
