--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -19,10 +19,10 @@ status-website:
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Status - Gaming mit Handicap
   introTitle: "Gaming mit Handicap Status"
-  introMessage: Dies ist die Status Seite von Gaming mit Handicap, die **Echtzeit-Daten** von unserem [GitHub repository](https://github.com/gamingmithandicap/status) verwendet. [**Erhalte kostenlos deine eigene Statusseite**](https://github.com/upptime/upptime)
+  introMessage: Dies ist die Status Seite von Gaming mit Handicap, die **Echtzeit-Daten** von unserem [GitHub repository](https://github.com/gamingmithandicap/status) verwendet.
   navbar:
     - title: Status
-      href: /
+      href: /status
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
 
