--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -19,7 +19,7 @@ status-website:
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Status - Gaming mit Handicap
   introTitle: "Gaming mit Handicap Status"
-  introMessage: Dies ist die Status Seite von Gaming mit Handicap, die **Echtzeit-Daten** von unserem [GitHub repository](https://github.com/gamingmithandicap/status) verwendet.
+  introMessage: Dies ist die Statusseite von Gaming mit Handicap, die **Echtzeit-Daten** von unserem [GitHub Repository](https://github.com/gamingmithandicap/status) verwendet.
   navbar:
     - title: Status
       href: /status
