--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,7 +17,7 @@ status-website:
   # cname: status2.gamhc.de
   baseUrl: /status
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  favicon: https://raw.githubusercontent.com/$OWNER/$REPO/master/assets/favicon.png
+  favicon: https://raw.githubusercontent.com/gamingmithandicap/status/master/assets/favicon.png
   name: Status - Gaming mit Handicap
   introTitle: "Gaming mit Handicap Status"
   introMessage: Dies ist die Statusseite von Gaming mit Handicap, die **Echtzeit-Daten** von unserem [GitHub Repository](https://github.com/gamingmithandicap/status) verwendet.
