--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -63,12 +63,12 @@ i18n:
   loading: Laden
   navGitHub: GitHub
   footer: Diese Seite ist [Open Source]($REPO) und wurde erstellt von [Upptime](https://upptime.js.org)
-  rateLimitExceededTitle: Ratenlimit überschritten
+  rateLimitExceededTitle: Anfragen Limit überschritten
   rateLimitExceededIntro: Du hast die Anzahl der Anfragen, die du in einer Stunde ausführen kannst, überschritten. Du musst daher warten, bevor du diese Webseite erneut aufrufen kannst. Alternativ kannst du ein GitHub Personal Access Token hinzufügen, um diese Webseite weiterhin zu nutzen.
   rateLimitExceededWhatDoesErrorMean: Was bedeutet dieser Fehler?
   rateLimitExceededErrorMeaning: Diese Webseite verwendet die GitHub-API, um auf Echtzeitdaten über den Status unserer Webseiten & Dienste zuzugreifen. Standardmäßig lässt GitHub jeder IP-Adresse 60 Anfragen pro Stunde zu, die du verbraucht hast.
   rateLimitExceededErrorHowCanFix: Wie kann ich das Problem beheben?
-  rateLimitExceededErrorFix: Du kannst noch eine Stunde warten, bis das Limit deiner IP-Adresse wiederhergestellt wird. Alternativ kannst du deinen GitHub Personal Access Token hinzufügen, wodurch du zusätzlich 5.000 Anfragen pro Stunde erhältst.
+  rateLimitExceededErrorFix: Du wartest eine Stunde, bis das Limit deiner IP-Adresse wiederhergestellt wird. Alternativ kannst du deinen GitHub Personal Access Token hinzufügen, wodurch du zusätzlich 5.000 Anfragen pro Stunde erhältst.
   rateLimitExceededGeneratePAT: Erfahre, wie du deinen GitHub Personal Access Token generieren kannst.
   rateLimitExceededHasSet: Du hast einen GitHub Personal Access Token gesetzt.
   rateLimitExceededRemoveToken: Token entfernen
