--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -23,7 +23,7 @@ status-website:
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   # cname: status2.gamhc.de
   baseUrl: /status
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  logoUrl: https://raw.githubusercontent.com/gamingmithandicap/status/master/assets/logo.png
   favicon: https://raw.githubusercontent.com/gamingmithandicap/status/master/assets/favicon.png
   name: Status - Gaming mit Handicap
   introTitle: "Gaming mit Handicap Status"
