--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -6,17 +6,17 @@ sites:
   - name: Webseite & Forum
     url: https://www.gamingmithandicap.de
   - name: TeamSpeak 3 Server
-    # icon: https://raw.githubusercontent.com/gamingmithandicap/status/master/assets/ts3_icon.png
+    icon: https://raw.githubusercontent.com/gamingmithandicap/status/master/assets/ts3_icon.png
     url: server.gamingmithandicap.de
     port: 10011
     check: "tcp-ping"
   - name: Minecraft Server
-    # icon: https://raw.githubusercontent.com/gamingmithandicap/status/master/assets/mc_icon.png
+    icon: https://raw.githubusercontent.com/gamingmithandicap/status/master/assets/mc_icon.png
     url: server.gamingmithandicap.de
     port: 25565
     check: "tcp-ping"
   - name: GTA 5 Server
-    # icon: https://raw.githubusercontent.com/gamingmithandicap/status/master/assets/gta5_icon.png
+    icon: https://raw.githubusercontent.com/gamingmithandicap/status/master/assets/gta5_icon.png
     url: server.gamingmithandicap.de
     port: 22005
     check: "tcp-ping"
