--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -30,7 +30,7 @@ status-website:
   favicon: https://raw.githubusercontent.com/gamingmithandicap/status/master/assets/favicon.png
   name: Status - Gaming mit Handicap
   introTitle: "Gaming mit Handicap Status"
-  introMessage: Dies ist die Statusseite von Gaming mit Handicap, die **Echtzeit-Daten** von unserem [GitHub Repository](https://github.com/gamingmithandicap/status) verwendet.
+  introMessage: Dies ist die Statusseite von Gaming mit Handicap.
   navbar:
     - title: Webseite
       href: https://www.gamingmithandicap.de
@@ -74,7 +74,7 @@ i18n:
   ms: ms
   loading: Laden
   navGitHub: GitHub
-  footer: Diese Seite ist [Open Source]($REPO) und wurde erstellt von [Upptime](https://upptime.js.org)
+  footer: Diese Seite wurde erstellt von [Upptime](https://upptime.js.org)
   rateLimitExceededTitle: Anfragen Limit überschritten
   rateLimitExceededIntro: Du hast die Anzahl der Anfragen, die du in einer Stunde ausführen kannst, überschritten. Du musst daher warten, bevor du diese Webseite erneut aufrufen kannst. Alternativ kannst du ein GitHub Personal Access Token hinzufügen, um diese Webseite weiterhin zu nutzen.
   rateLimitExceededWhatDoesErrorMean: Was bedeutet dieser Fehler?
