--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,16 +3,16 @@ owner: gamingmithandicap # Your GitHub organization or username, where this repo
 repo: status # The name of this repository
 
 sites:
-  - name: Webseite & Forum
+  - name: Webseite
     url: https://www.gamingmithandicap.de
-  - name: TeamSpeak 3 Server
-    icon: https://raw.githubusercontent.com/gamingmithandicap/status/master/assets/ts3_icon.png
-    url: server.gamingmithandicap.de
-    port: 10011
-    check: "tcp-ping"
+  #- name: TeamSpeak 3 Server
+  #  icon: https://raw.githubusercontent.com/gamingmithandicap/status/master/assets/ts3_icon.png
+  #  url: server.gamingmithandicap.de
+  #  port: 10011
+  #  check: "tcp-ping"
   - name: Minecraft Server
     icon: https://raw.githubusercontent.com/gamingmithandicap/status/master/assets/mc_icon.png
-    url: server.gamingmithandicap.de
+    url: mc.gamhc.de
     port: 25565
     check: "tcp-ping"
   - name: FiveM Server
