--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -28,7 +28,7 @@ status-website:
   # baseUrl: /status
   logoUrl: https://raw.githubusercontent.com/gamingmithandicap/status/master/assets/logo.png
   favicon: https://raw.githubusercontent.com/gamingmithandicap/status/master/assets/favicon.png
-  name: Status - Gaming mit Handicap
+  name: Gaming mit Handicap Status
   introTitle: "Gaming mit Handicap Status"
   introMessage: Dies ist die Statusseite von Gaming mit Handicap.
   navbar:
